# stm8sdcc

./: .gitignore  CMakeLists.txt  main.c  readme.md  stm8s_it.h
STM8S_StdPeriph_Driver/inc/: stm8s.h
STM8S_StdPeriph_Driver/src/: stm8s_itc.c
inc/: main.h
src/: main.c  opt.hex  opt.orig  stm8s_it.c
